Minor formatting change in swapctl -l as noted in my PR bin/51155